--- a/Theme/Themes/Buttons/CheckBox.xaml
+++ b/Theme/Themes/Buttons/CheckBox.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+					xmlns:Theme="clr-namespace:Elysium.Theme">
 
 	<ResourceDictionary.MergedDictionaries>
 		<ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
@@ -9,17 +10,17 @@
 		
 		<Setter Property="Background" Value="{StaticResource Transparent}"/>
 		<Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-		<Setter Property="BorderThickness" Value="{StaticResource DefaultThickness}"/>
+		<Setter Property="BorderThickness" Value="{x:Static Theme:Parameters.DefaultThickness}"/>
 		<Setter Property="Foreground" Value="{StaticResource Foreground}"/>
-		<Setter Property="FontFamily" Value="{StaticResource FontFamily}"/>
-		<Setter Property="FontSize" Value="9pt"/>
+		<Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
+		<Setter Property="FontSize" Value="{x:Static Theme:Parameters.TextFontSize}"/>
 		<Setter Property="FontWeight" Value="Normal"/>
 
 		<Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
 
 		<Setter Property="HorizontalContentAlignment" Value="Left"/>
 		<Setter Property="VerticalContentAlignment" Value="Center"/>
-		<Setter Property="Padding" Value="{StaticResource BoldPadding}"/>
+		<Setter Property="Padding" Value="{x:Static Theme:Parameters.BoldPadding}"/>
 
 		<Setter Property="OverridesDefaultStyle" Value="True"/>
 		<Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -41,16 +42,16 @@
 								<Border Background="{TemplateBinding Background}"
 										BorderBrush="{TemplateBinding BorderBrush}"
 										BorderThickness="{TemplateBinding BorderThickness}"
-										Width="{StaticResource BulletBorderSize}" Height="{StaticResource BulletBorderSize}">
+										Width="{TemplateBinding Theme:Parameters.BulletDecoratorSize}" Height="{TemplateBinding Theme:Parameters.BulletDecoratorSize}">
 									<Grid Background="{StaticResource Transparent}">
 										<Path x:Name="CheckBullet"
 											  Fill="{StaticResource Transparent}"
 											  Stroke="{StaticResource ForegroundLowlight}"
-											  StrokeThickness="{StaticResource BoldThicknessValue}"
+											  StrokeThickness="{x:Static Theme:Parameters.BoldStrokeThickness}"
 											  Stretch="Fill"
 											  Visibility="Collapsed"
 											  HorizontalAlignment="Center" VerticalAlignment="Center"
-											  Width="{StaticResource CheckBoxBulletSize}" Height="{StaticResource CheckBoxBulletSize}">
+											  Width="{TemplateBinding Theme:Parameters.CheckBoxBulletSize}" Height="{TemplateBinding Theme:Parameters.CheckBoxBulletSize}">
 											<Path.Data>
 												<GeometryGroup>
 													<LineGeometry StartPoint="0,3" EndPoint="4,8"/>
@@ -65,7 +66,7 @@
 											  Visibility="Collapsed"
 											  Margin="2"
 											  HorizontalAlignment="Center" VerticalAlignment="Center"
-											  Width="{StaticResource CheckBoxBulletSize}" Height="{StaticResource CheckBoxBulletSize}">
+											  Width="{TemplateBinding Theme:Parameters.CheckBoxBulletSize}" Height="{TemplateBinding Theme:Parameters.CheckBoxBulletSize}">
 											<Path.Data>
 												<GeometryGroup>
 													<RectangleGeometry Rect="0,0,1,1"/>
@@ -79,7 +80,7 @@
 											  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
 											  RecognizesAccessKey="True">
 								<ContentPresenter.Margin>
-									<Thickness Left="{StaticResource BoldPaddingValue}"
+									<Thickness Left="{x:Static Theme:Parameters.SemiboldPaddingValue}"
 											   Top="0"
 											   Right="0"
 											   Bottom="0"/>
