--- a/Theme/Themes/Buttons/CommandButtonsBase.xaml
+++ b/Theme/Themes/Buttons/CommandButtonsBase.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Converters="clr-namespace:Elysium.Theme.Converters">
+                    xmlns:Converters="clr-namespace:Elysium.Theme.Converters"
+                    xmlns:Theme="clr-namespace:Elysium.Theme">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
@@ -10,12 +11,15 @@
         
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-        <Setter Property="BorderThickness" Value="{StaticResource SemiboldThickness}"/>
+        <Setter Property="BorderThickness" Value="{x:Static Theme:Parameters.SemiboldThickness}"/>
         <Setter Property="Foreground" Value="{StaticResource ForegroundMiddlelight}"/>
+        <Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
+        <Setter Property="FontSize" Value="{x:Static Theme:Parameters.ContentFontSize}"/>
+        <Setter Property="FontWeight" Value="SemiBold"/>
 
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
 
-        <Setter Property="Padding" Value="{StaticResource BoldPadding}"/>
+        <Setter Property="Padding" Value="{x:Static Theme:Parameters.BoldPadding}"/>
         
         <Setter Property="SnapsToDevicePixels" Value="True"/>
 
