--- a/Theme/Themes/Buttons/RadioButton.xaml
+++ b/Theme/Themes/Buttons/RadioButton.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:Theme="clr-namespace:Elysium.Theme">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
@@ -9,17 +10,17 @@
         
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-        <Setter Property="BorderThickness" Value="{StaticResource DefaultThickness}"/>
+        <Setter Property="BorderThickness" Value="{x:Static Theme:Parameters.DefaultThickness}"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
-        <Setter Property="FontFamily" Value="{StaticResource FontFamily}"/>
-        <Setter Property="FontSize" Value="9pt"/>
+        <Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
+        <Setter Property="FontSize" Value="{x:Static Theme:Parameters.TextFontSize}"/>
         <Setter Property="FontWeight" Value="Normal"/>
 
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
 
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Padding" Value="{StaticResource BoldPadding}"/>
+        <Setter Property="Padding" Value="{x:Static Theme:Parameters.BoldPadding}"/>
 
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -39,7 +40,7 @@
                                          FlowDirection="{TemplateBinding FlowDirection}">
                             <BulletDecorator.Bullet>
                                 <Grid Background="{StaticResource Transparent}"
-                                      Width="{StaticResource BulletBorderSize}" Height="{StaticResource BulletBorderSize}">
+                                      Width="{TemplateBinding Theme:Parameters.BulletDecoratorSize}" Height="{TemplateBinding Theme:Parameters.BulletDecoratorSize}">
                                     <Ellipse Fill="{TemplateBinding Background}"
                                              Stroke="{TemplateBinding BorderBrush}"
                                              StrokeThickness="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderThickness.Left}"/>
@@ -48,7 +49,7 @@
                                              StrokeThickness="0"
                                              Visibility="Collapsed"
                                              HorizontalAlignment="Center" VerticalAlignment="Center"
-                                             Width="{StaticResource RadioButtonBulletSize}" Height="{StaticResource RadioButtonBulletSize}">
+                                             Width="{TemplateBinding Theme:Parameters.RadioButtonBulletSize}" Height="{TemplateBinding Theme:Parameters.RadioButtonBulletSize}">
                                     </Ellipse>
                                 </Grid>
                             </BulletDecorator.Bullet>
@@ -56,7 +57,7 @@
                                               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                               RecognizesAccessKey="True">
                                 <ContentPresenter.Margin>
-                                    <Thickness Left="{StaticResource BoldPaddingValue}"
+                                    <Thickness Left="{x:Static Theme:Parameters.SemiboldPaddingValue}"
                                                Top="0"
                                                Right="0"
                                                Bottom="0"/>
