--- a/Theme/Themes/Ranges/Slider.xaml
+++ b/Theme/Themes/Ranges/Slider.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:System="clr-namespace:System;assembly=mscorlib">
+                    xmlns:Theme="clr-namespace:Elysium.Theme">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
@@ -89,20 +89,19 @@
               SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"
-                               MinHeight="{StaticResource HorizontalSliderMinHeight}"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <TickBar Grid.Row="0"
                      Fill="{TemplateBinding BorderBrush}"
                      Placement="Top"
-                     Height="{StaticResource SliderElementThicknessValue}"
+                     Height="{TemplateBinding Theme:Parameters.SliderTrackSize}"
                      Visibility="Collapsed"/>
             <Rectangle x:Name="PART_SelectionRange"
                        Grid.Row="1"
                        Fill="{StaticResource Foreground}"
                        StrokeThickness="0"
-                       Height="{StaticResource SliderElementThicknessValue}"
+                       Height="{TemplateBinding Theme:Parameters.SliderTrackSize}"
                        Visibility="Hidden"/>
             <Track x:Name="PART_Track"
                    Grid.Row="1"
@@ -110,18 +109,18 @@
                 <Track.DecreaseRepeatButton>
                     <RepeatButton Command="{x:Static Slider.DecreaseLarge}"
                                   IsEnabled="{TemplateBinding IsEnabled}"
-                                  Height="{StaticResource SliderElementThicknessValue}"
+                                  Height="{TemplateBinding Theme:Parameters.SliderTrackSize}"
                                   Style="{StaticResource SliderRepeatButtonValuableStyle}"/>
                 </Track.DecreaseRepeatButton>
                 <Track.Thumb>
                     <Thumb IsEnabled="{TemplateBinding IsEnabled}"
-                           Width="{StaticResource SliderThumbThicknessValue}"
-                           Height="{StaticResource HorizontalSliderMinHeight}"
+                           Width="{TemplateBinding Theme:Parameters.SliderThumbThickness}"
+                           Height="{TemplateBinding Height}"
                            Style="{StaticResource SliderThumbStyle}">
                         <Thumb.BorderThickness>
                             <Thickness Left="0"
                                        Top="0"
-                                       Right="{StaticResource DefaultThicknessValue}"
+                                       Right="{x:Static Theme:Parameters.DefaultStrokeThickness}"
                                        Bottom="0"/>
                         </Thumb.BorderThickness>
                     </Thumb>
@@ -129,14 +128,14 @@
                 <Track.IncreaseRepeatButton>
                     <RepeatButton Command="{x:Static Slider.IncreaseLarge}"
                                   IsEnabled="{TemplateBinding IsEnabled}"
-                                  Height="{StaticResource SliderElementThicknessValue}"
+                                  Height="{TemplateBinding Theme:Parameters.SliderTrackSize}"
                                   Style="{StaticResource SliderRepeatButtonStyle}"/>
                 </Track.IncreaseRepeatButton>
             </Track>
             <TickBar Grid.Row="2"
                      Fill="{TemplateBinding BorderBrush}"
                      Placement="Bottom"
-                     Height="{StaticResource SliderElementThicknessValue}"
+                     Height="{TemplateBinding Theme:Parameters.SliderTrackSize}"
                      Visibility="Collapsed"/>
         </Grid>
     </ControlTemplate>
@@ -146,20 +145,19 @@
               SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"
-                                  MinWidth="{StaticResource VerticalSliderMinWidth}"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <TickBar Grid.Column="0"
                      Fill="{TemplateBinding BorderBrush}"
                      Placement="Top"
-                     Width="{StaticResource SliderElementThicknessValue}"
+                     Width="{TemplateBinding Theme:Parameters.SliderTrackSize}"
                      Visibility="Collapsed"/>
             <Rectangle x:Name="PART_SelectionRange"
                        Grid.Column="1"
                        Fill="{StaticResource Foreground}"
                        StrokeThickness="0"
-                       Width="{StaticResource SliderElementThicknessValue}"
+                       Width="{TemplateBinding Theme:Parameters.SliderTrackSize}"
                        Visibility="Hidden"/>
             <Track x:Name="PART_Track"
                    Grid.Column="1"
@@ -167,17 +165,17 @@
                 <Track.DecreaseRepeatButton>
                     <RepeatButton Command="{x:Static Slider.DecreaseLarge}"
                                   IsEnabled="{TemplateBinding IsEnabled}"
-                                  Width="{StaticResource SliderElementThicknessValue}"
+                                  Width="{TemplateBinding Theme:Parameters.SliderTrackSize}"
                                   Style="{StaticResource SliderRepeatButtonValuableStyle}"/>
                 </Track.DecreaseRepeatButton>
                 <Track.Thumb>
                     <Thumb IsEnabled="{TemplateBinding IsEnabled}"
-                           Width="{StaticResource HorizontalSliderMinHeight}"
-                           Height="{StaticResource SliderThumbThicknessValue}"
+                           Width="{TemplateBinding Width}"
+                           Height="{TemplateBinding Theme:Parameters.SliderThumbThickness}"
                            Style="{StaticResource SliderThumbStyle}">
                         <Thumb.BorderThickness>
                             <Thickness Left="0"
-                                       Top="{StaticResource DefaultThicknessValue}"
+                                       Top="{x:Static Theme:Parameters.DefaultStrokeThickness}"
                                        Right="0"
                                        Bottom="0"/>
                         </Thumb.BorderThickness>
@@ -186,14 +184,14 @@
                 <Track.IncreaseRepeatButton>
                     <RepeatButton Command="{x:Static Slider.IncreaseLarge}"
                                   IsEnabled="{TemplateBinding IsEnabled}"
-                                  Width="{StaticResource SliderElementThicknessValue}"
+                                  Width="{TemplateBinding Theme:Parameters.SliderTrackSize}"
                                   Style="{StaticResource SliderRepeatButtonStyle}"/>
                 </Track.IncreaseRepeatButton>
             </Track>
             <TickBar Grid.Column="2"
                      Fill="{TemplateBinding BorderBrush}"
                      Placement="Bottom"
-                     Width="{StaticResource SliderElementThicknessValue}"
+                     Width="{TemplateBinding Theme:Parameters.SliderTrackSize}"
                      Visibility="Collapsed"/>
         </Grid>
     </ControlTemplate>
@@ -202,15 +200,16 @@
 
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-        <Setter Property="BorderThickness" Value="{StaticResource SliderElementThickness}"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
+        <Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
+        <Setter Property="FontSize" Value="{x:Static Theme:Parameters.TextFontSize}"/>
+        <Setter Property="FontWeight" Value="Normal"/>
 
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Focusable" Value="False"/>
         
         <Setter Property="Stylus.IsPressAndHoldEnabled" Value="False"/>
-
-        <Setter Property="Margin" Value="{StaticResource DefaultPadding}"/>
-        <Setter Property="Padding" Value="{StaticResource DefaultPadding}"/>
 
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -223,9 +222,9 @@
             
             <Trigger Property="Orientation" Value="Horizontal">
                 
-                <Setter Property="MinHeight" Value="{StaticResource HorizontalSliderMinHeight}"/>
-                <Setter Property="Height" Value="{StaticResource HorizontalSliderHeight}"/>
-                <Setter Property="MaxHeight" Value="{StaticResource HorizontalSliderMaxHeight}"/>
+                <Setter Property="MinHeight" Value="14"/>
+                <Setter Property="Height" Value="18"/>
+                <Setter Property="MaxHeight" Value="22"/>
                 
                 <Setter Property="Template" Value="{StaticResource HorizontalSliderTemplate}"/>
 
@@ -233,9 +232,9 @@
             
             <Trigger Property="Orientation" Value="Vertical">
                 
-                <Setter Property="MinWidth" Value="{StaticResource VerticalSliderMinWidth}"/>
-                <Setter Property="Width" Value="{StaticResource VerticalSliderWidth}"/>
-                <Setter Property="MaxWidth" Value="{StaticResource VerticalSliderMaxWidth}"/>
+                <Setter Property="MinWidth" Value="14"/>
+                <Setter Property="Width" Value="18"/>
+                <Setter Property="MaxWidth" Value="22"/>
                 
                 <Setter Property="Template" Value="{StaticResource VerticalSliderTemplate}"/>   
                 
