--- a/Theme/Themes/Scrolls/ScrollBar.xaml
+++ b/Theme/Themes/Scrolls/ScrollBar.xaml
@@ -1,15 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:Theme="clr-namespace:Elysium.Theme">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
-    <Style x:Key="ScrollBarLineButtonStyle" TargetType="{x:Type RepeatButton}">
+    <Style x:Key="ScrollBarLineDownButtonStyle" TargetType="{x:Type RepeatButton}">
         
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-        <Setter Property="BorderThickness" Value="{StaticResource DefaultThickness}"/>
+        <Setter Property="BorderThickness" Value="{x:Static Theme:Parameters.DefaultThickness}"/>
         
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Focusable" Value="False"/>
@@ -27,12 +28,11 @@
                             BorderBrush="{TemplateBinding Background}"
                             BorderThickness="{TemplateBinding BorderThickness}"
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
-                        <Polygon Points="{TemplateBinding Content}"
+                        <Polygon Points="0,0 3,4 6,0"
                                  Fill="{TemplateBinding BorderBrush}"
                                  StrokeThickness="0"
-                                 Stretch="None"
-                                 HorizontalAlignment="Center" VerticalAlignment="Center"
-                                 Width="{StaticResource ScrollBarArrowSize}" Height="{StaticResource ScrollBarArrowSize}"/>
+                                 Stretch="Uniform"
+                                 Width="{TemplateBinding Theme:Parameters.ScrollBarArrowSize}" Height="{TemplateBinding Theme:Parameters.ScrollBarArrowSize}"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
@@ -50,6 +50,30 @@
             </Trigger>            
         </Style.Triggers>
         
+    </Style>
+
+    <Style x:Key="ScrollBarLineUpButtonStyle" TargetType="{x:Type RepeatButton}">
+        <Setter Property="LayoutTransform">
+            <Setter.Value>
+                <RotateTransform Angle="180"/>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="ScrollBarLineLeftButtonStyle" TargetType="{x:Type RepeatButton}">
+        <Setter Property="LayoutTransform">
+            <Setter.Value>
+                <RotateTransform Angle="-90"/>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="ScrollBarLineRightButtonStyle" TargetType="{x:Type RepeatButton}">
+        <Setter Property="LayoutTransform">
+            <Setter.Value>
+                <RotateTransform Angle="90"/>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style x:Key="ScrollBarPageButtonStyle" TargetType="{x:Type RepeatButton}">
@@ -92,7 +116,14 @@
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
         <Setter Property="Stylus.IsPressAndHoldEnabled" Value="False"/>
         
-        <Setter Property="Padding" Value="{StaticResource ThinPadding}"/>
+        <Setter Property="Padding">
+            <Setter.Value>
+                <Thickness Left="{x:Static Theme:Parameters.DefaultPaddingValue}"
+                           Top="0"
+                           Right="0"
+                           Bottom="0"/>
+            </Setter.Value>
+        </Setter>
 
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -139,17 +170,9 @@
                 <RepeatButton Grid.Column="0"
                               Command="{x:Static ScrollBar.LineLeftCommand}"
                               IsEnabled="{TemplateBinding IsEnabled}"
-                              Style="{StaticResource ScrollBarLineButtonStyle}"
-                              Height="{StaticResource HorizontalScrollBarHeight}"
-                              Visibility="Collapsed">
-                    <RepeatButton.Content>
-                        <PointCollection>
-                            <Point X="{StaticResource ScrollBarArrowSize}" Y="0"/>
-                            <Point X="0" Y="{StaticResource ScrollBarArrowSizeHalf}"/>
-                            <Point X="{StaticResource ScrollBarArrowSize}" Y="{StaticResource ScrollBarArrowSize}"/>
-                        </PointCollection>
-                    </RepeatButton.Content>
-                </RepeatButton>
+                              Theme:Parameters.ScrollBarArrowSize="{TemplateBinding Theme:Parameters.ScrollBarArrowSize}"
+                              Style="{StaticResource ScrollBarLineLeftButtonStyle}"
+                              Visibility="Collapsed"/>
                 <Track x:Name="PART_Track"
                        Grid.Column="1">
                     <Track.DecreaseRepeatButton>
@@ -170,17 +193,9 @@
                 <RepeatButton Grid.Column="2"
                               Command="{x:Static ScrollBar.LineRightCommand}"
                               IsEnabled="{TemplateBinding IsEnabled}"
-                              Style="{StaticResource ScrollBarLineButtonStyle}"
-                              Height="{StaticResource HorizontalScrollBarHeight}"
-                              Visibility="Collapsed">
-                    <RepeatButton.Content>
-                        <PointCollection>
-                            <Point X="0" Y="0"/>
-                            <Point X="{StaticResource ScrollBarArrowSize}" Y="{StaticResource ScrollBarArrowSizeHalf}"/>
-                            <Point X="0" Y="{StaticResource ScrollBarArrowSize}"/>
-                        </PointCollection>
-                    </RepeatButton.Content>
-                </RepeatButton>
+                              Theme:Parameters.ScrollBarArrowSize="{TemplateBinding Theme:Parameters.ScrollBarArrowSize}"
+                              Style="{StaticResource ScrollBarLineRightButtonStyle}"
+                              Visibility="Collapsed"/>
             </Grid>
         </Border>
     </ControlTemplate>
@@ -199,17 +214,9 @@
                 <RepeatButton Grid.Row="0"
                               Command="{x:Static ScrollBar.LineUpCommand}"
                               IsEnabled="{TemplateBinding IsEnabled}"
-                              Style="{StaticResource ScrollBarLineButtonStyle}"
-                              Height="{StaticResource VerticalScrollBarWidth}"
-                              Visibility="Collapsed">
-                    <RepeatButton.Content>
-                        <PointCollection>
-                            <Point X="0" Y="{StaticResource ScrollBarArrowSize}"/>
-                            <Point X="{StaticResource ScrollBarArrowSizeHalf}" Y="0"/>
-                            <Point X="{StaticResource ScrollBarArrowSize}" Y="{StaticResource ScrollBarArrowSize}"/>
-                        </PointCollection>
-                    </RepeatButton.Content>
-                </RepeatButton>
+                              Theme:Parameters.ScrollBarArrowSize="{TemplateBinding Theme:Parameters.ScrollBarArrowSize}"
+                              Style="{StaticResource ScrollBarLineUpButtonStyle}"
+                              Visibility="Collapsed"/>
                 <Track x:Name="PART_Track"
                        Grid.Row="1"
                        IsDirectionReversed="True">
@@ -231,17 +238,9 @@
                 <RepeatButton Grid.Row="2"
                               Command="{x:Static ScrollBar.LineDownCommand}"
                               IsEnabled="{TemplateBinding IsEnabled}"
-                              Style="{StaticResource ScrollBarLineButtonStyle}"
-                              Height="{StaticResource VerticalScrollBarWidth}"
-                              Visibility="Collapsed">
-                    <RepeatButton.Content>
-                        <PointCollection>
-                            <Point X="0" Y="0"/>
-                            <Point X="{StaticResource ScrollBarArrowSizeHalf}" Y="{StaticResource ScrollBarArrowSize}"/>
-                            <Point X="{StaticResource ScrollBarArrowSize}" Y="0"/>
-                        </PointCollection>
-                    </RepeatButton.Content>
-                </RepeatButton>
+                              Theme:Parameters.ScrollBarArrowSize="{TemplateBinding Theme:Parameters.ScrollBarArrowSize}"
+                              Style="{StaticResource ScrollBarLineDownButtonStyle}"
+                              Visibility="Collapsed"/>
             </Grid>
         </Border>
     </ControlTemplate>
@@ -266,13 +265,13 @@
                 
                 <Setter Property="BorderThickness">
                     <Setter.Value>
-                        <Thickness Left="0" Top="0" Right="0" Bottom="{StaticResource DefaultThicknessValue}"/>
+                        <Thickness Left="0" Top="0" Right="0" Bottom="{x:Static Theme:Parameters.DefaultStrokeThickness}"/>
                     </Setter.Value>
                 </Setter>
 
-                <Setter Property="MinHeight" Value="{StaticResource HorizontalScrollBarHeight}"/>
-                <Setter Property="Height" Value="{StaticResource HorizontalScrollBarHeight}"/>
-                <Setter Property="MaxHeight" Value="{StaticResource HorizontalScrollBarHeight}"/>
+                <Setter Property="MinHeight" Value="6"/>
+                <Setter Property="Height" Value="6"/>
+                <Setter Property="MaxHeight" Value="10"/>
                 
                 <Setter Property="Template" Value="{StaticResource HorizontalScrollBarTemplate}"/>
                 
@@ -282,13 +281,13 @@
 
                 <Setter Property="BorderThickness">
                     <Setter.Value>
-                        <Thickness Left="0" Top="0" Right="{StaticResource DefaultThicknessValue}" Bottom="0"/>
+                        <Thickness Left="0" Top="0" Right="{x:Static Theme:Parameters.DefaultStrokeThickness}" Bottom="0"/>
                     </Setter.Value>
                 </Setter>
 
-                <Setter Property="MinWidth" Value="{StaticResource VerticalScrollBarWidth}"/>
-                <Setter Property="Width" Value="{StaticResource VerticalScrollBarWidth}"/>
-                <Setter Property="MaxWidth" Value="{StaticResource VerticalScrollBarWidth}"/>
+                <Setter Property="MinWidth" Value="6"/>
+                <Setter Property="Width" Value="6"/>
+                <Setter Property="MaxWidth" Value="10"/>
 
                 <Setter Property="Template" Value="{StaticResource VerticalScrollBarTemplate}"/>
 
