--- a/Theme/Themes/Scrolls/ScrollViewer.xaml
+++ b/Theme/Themes/Scrolls/ScrollViewer.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:Theme="clr-namespace:Elysium.Theme">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
@@ -11,8 +12,8 @@
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
-        <Setter Property="FontFamily" Value="{StaticResource FontFamily}"/>
-        <Setter Property="FontSize" Value="9pt"/>
+        <Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
+        <Setter Property="FontSize" Value="{x:Static Theme:Parameters.TextFontSize}"/>
         <Setter Property="FontWeight" Value="Normal"/>
 
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -54,7 +55,7 @@
                                        Stretch="Fill"
                                        HorizontalAlignment="Stretch"
                                        VerticalAlignment="Bottom"
-                                       Height="{StaticResource ScrollViewerShadowSize}"
+                                       Height="{TemplateBinding Theme:Parameters.ScrollViewerShadowSize}"
                                        Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}">
                                 <Rectangle.Fill>
                                     <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
@@ -68,7 +69,7 @@
                                        Stretch="Fill"
                                        HorizontalAlignment="Right"
                                        VerticalAlignment="Stretch"
-                                       Width="{StaticResource ScrollViewerShadowSize}"
+                                       Width="{TemplateBinding Theme:Parameters.ScrollViewerShadowSize}"
                                        Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}">
                                 <Rectangle.Fill>
                                     <LinearGradientBrush StartPoint="0,0.5" EndPoint="1,0.5">
