--- a/Theme/Themes/Selectors/ComboBox.xaml
+++ b/Theme/Themes/Selectors/ComboBox.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:Theme="clr-namespace:Elysium.Theme">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
@@ -16,13 +17,16 @@
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <Polygon Fill="{StaticResource ForegroundMiddlelight}"
                                  StrokeThickness="0"
-                                 Margin="{StaticResource ComboBoxArrowMargin}"
-                                 HorizontalAlignment="Right" VerticalAlignment="Center">
+                                 Stretch="Uniform"
+                                 Margin="{TemplateBinding Theme:Parameters.ComboBoxArrowMargin}"
+                                 HorizontalAlignment="Right" VerticalAlignment="Center"
+                                 Width="{TemplateBinding Theme:Parameters.ComboBoxArrowSize}"
+                                 Height="{TemplateBinding Theme:Parameters.ComboBoxArrowSize}">
                             <Polygon.Points>
                                 <PointCollection>
                                     <Point X="0" Y="0"/>
-                                    <Point X="{StaticResource ComboBoxArrowSizeHalf}" Y="{StaticResource ComboBoxArrowSizeHalf}"/>
-                                    <Point X="{StaticResource ComboBoxArrowSize}" Y="0"/>
+                                    <Point X="3" Y="4"/>
+                                    <Point X="6" Y="0"/>
                                 </PointCollection>
                             </Polygon.Points>
                         </Polygon>
@@ -66,10 +70,10 @@
 
         <Setter Property="Background" Value="{StaticResource Background}"/>
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-        <Setter Property="BorderThickness" Value="{StaticResource DefaultThickness}"/>
+        <Setter Property="BorderThickness" Value="{x:Static Theme:Parameters.DefaultThickness}"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
-        <Setter Property="FontFamily" Value="{StaticResource FontFamily}"/>
-        <Setter Property="FontSize" Value="10pt"/>
+        <Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
+        <Setter Property="FontSize" Value="{x:Static Theme:Parameters.ContentFontSize}"/>
         <Setter Property="FontWeight" Value="Normal"/>
 
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
@@ -83,7 +87,7 @@
 
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Padding" Value="{StaticResource BoldPadding}"/>
+        <Setter Property="Padding" Value="{x:Static Theme:Parameters.BoldPadding}"/>
 
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -100,30 +104,30 @@
                         <Grid Background="{StaticResource Transparent}">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="{StaticResource ComboBoxButtonWidth}"/>
+                                <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <Popup x:Name="PART_Popup" 
                                    Grid.Column="0"
                                    Grid.ColumnSpan="2"
                                    IsOpen="{Binding IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}}"
                                    Placement="Bottom"
+                                   VerticalOffset="-1"
                                    PlacementTarget="{Binding ElementName=LayoutRoot}">
                                 <Popup.Resources>
                                     <Style TargetType="{x:Type ScrollBar}" BasedOn="{StaticResource {x:Type ScrollBar}}">
-                                        <Setter Property="BorderBrush" Value="{StaticResource Transparent}"/>
+                                        <Style.Triggers>
+                                            <Trigger Property="Orientation" Value="Vertical">
+                                                <Setter Property="BorderThickness" Value="0"/>                                                
+                                            </Trigger>
+                                        </Style.Triggers>
                                     </Style>
                                 </Popup.Resources>
                                 <ScrollViewer x:Name="DropDownScrollViewver"
                                               Background="{StaticResource Background}"
-                                              BorderBrush="{StaticResource ForegroundLowlight}"
+                                              BorderBrush="{TemplateBinding BorderBrush}"
+                                              BorderThickness="{TemplateBinding BorderThickness}"
                                               MinWidth="{Binding ActualWidth, ElementName=LayoutRoot}"
                                               MaxHeight="{TemplateBinding MaxDropDownHeight}">
-                                    <ScrollViewer.BorderThickness>
-                                        <Thickness Left="{StaticResource DefaultThicknessValue}"
-                                                   Top="0"
-                                                   Right="{StaticResource DefaultThicknessValue}"
-                                                   Bottom="{StaticResource DefaultThicknessValue}"/>
-                                    </ScrollViewer.BorderThickness>
                                     <ItemsPresenter KeyboardNavigation.DirectionalNavigation="Contained"/>
                                 </ScrollViewer>
                             </Popup>
@@ -133,7 +137,10 @@
                                           Background="{TemplateBinding Background}"
                                           BorderThickness="0"
                                           IsChecked="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
-                                          Style="{StaticResource ComboBoxToggleButton}"/>
+                                          Theme:Parameters.ComboBoxArrowSize="{TemplateBinding Theme:Parameters.ComboBoxArrowSize}"
+                                          Theme:Parameters.ComboBoxArrowMargin="{TemplateBinding Theme:Parameters.ComboBoxArrowMargin}"
+                                          Style="{StaticResource ComboBoxToggleButton}"
+                                          Width="{TemplateBinding Theme:Parameters.ComboBoxButtonSize}"/>
                             <ContentPresenter x:Name="ContentPresenter"
                                               Content="{TemplateBinding SelectionBoxItem}"
                                               ContentStringFormat="{TemplateBinding SelectionBoxItemStringFormat}"
@@ -163,25 +170,20 @@
                     </Border>
 
                     <ControlTemplate.Triggers>
+                        <Trigger Property="IsEditable" Value="False">
+                            <Setter TargetName="Button" Property="Width" Value="NaN"/>
+                        </Trigger>
                         <Trigger Property="IsEditable" Value="True">
                             <Setter TargetName="Button" Property="Grid.Column" Value="1"/>
                             <Setter TargetName="Button" Property="Grid.ColumnSpan" Value="1"/>
                             <Setter TargetName="ContentPresenter" Property="Visibility" Value="Collapsed"/>
                             <Setter TargetName="TextBoxLayout" Property="Visibility" Value="Visible"/>
-                        </Trigger>                        
+                        </Trigger>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="Background" Value="{StaticResource ForegroundHighlight}"/>
                         </Trigger>
                         <Trigger Property="IsDropDownOpen" Value="True">
                             <Setter Property="Background" Value="{StaticResource ForegroundHighlight}"/>
-                            <Setter Property="BorderThickness">
-                                <Setter.Value>
-                                    <Thickness Left="{StaticResource DefaultThicknessValue}"
-                                               Top="{StaticResource DefaultThicknessValue}"
-                                               Right="{StaticResource DefaultThicknessValue}"
-                                               Bottom="0"/>
-                                </Setter.Value>
-                            </Setter>
                         </Trigger>
                     </ControlTemplate.Triggers>
                     
