--- a/Theme/Themes/Selectors/ListBox.xaml
+++ b/Theme/Themes/Selectors/ListBox.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:Theme="clr-namespace:Elysium.Theme">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
@@ -11,8 +12,8 @@
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
-        <Setter Property="FontFamily" Value="{StaticResource FontFamily}"/>
-        <Setter Property="FontSize" Value="10pt"/>
+        <Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
+        <Setter Property="FontSize" Value="{x:Static Theme:Parameters.ContentFontSize}"/>
         <Setter Property="FontWeight" Value="Normal"/>
         
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
@@ -26,7 +27,7 @@
 
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Padding" Value="{StaticResource BoldPadding}"/>
+        <Setter Property="Padding" Value="{x:Static Theme:Parameters.BoldPadding}"/>
 
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
