- Added style for ContextMenu - Added style for MenuItem (partially) - Small changes in ListBox and ComboBox styles

--- a/Theme/Themes/Generic.xaml
+++ b/Theme/Themes/Generic.xaml
@@ -30,6 +30,9 @@
         <ResourceDictionary Source="/Theme;component/Themes/Selectors/ListBoxItem.xaml"/>
         <ResourceDictionary Source="/Theme;component/Themes/Selectors/ComboBox.xaml"/>
         <ResourceDictionary Source="/Theme;component/Themes/Selectors/ComboBoxItem.xaml"/>
+
+        <ResourceDictionary Source="/Theme;component/Themes/Menus/ContextMenu.xaml"/>
+        <ResourceDictionary Source="/Theme;component/Themes/Menus/MenuItem.xaml"/>
         
         <ResourceDictionary Source="/Theme;component/Themes/Windows/Window.xaml"/>
         
