--- a/Theme.Test/MainWindow.xaml
+++ b/Theme.Test/MainWindow.xaml
@@ -1,141 +1,163 @@
 ﻿<InternalControls:Window x:Class="Elysium.Theme.Test.MainWindow"
-                         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                         xmlns:InternalControls="clr-namespace:Elysium.Theme.Controls;assembly=Theme"
-                         Title="MainWindow"
-                         Background="{StaticResource Background}"
-                         MouseLeftButtonDown="WindowMouseLeftButtonDown"
-                         Width="1000" Height="600">
-    <Grid Background="{StaticResource Transparent}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="125"/>
-            <ColumnDefinition Width="125"/>
-            <ColumnDefinition Width="150"/>
-            <ColumnDefinition Width="125"/>
-            <ColumnDefinition Width="125"/>
-            <ColumnDefinition Width="225"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="60"/>
-            <RowDefinition Height="60"/>
-            <RowDefinition Height="60"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Button Grid.Column="0"
-                Grid.Row="0"
-                Margin="15"
-                Content="Button"/>
-        <RepeatButton Grid.Column="0"
-                      Grid.Row="1"
-                      Margin="15"
-                      Content="RepeatButton"/>
-        <ToggleButton Grid.Column="0"
-                      Grid.Row="2"
-                      Margin="15"
-                      Content="ToggleButton"/>
-        <InternalControls:CommandButton Grid.Column="0"
-                                        Grid.Row="3"
-                                        HorizontalAlignment="Center"
-                                        Width="30" Height="30">
-            <Grid Background="Transparent">
-                <Path Data="M 7,0 L 7,14 M 0,7 L 14,7"
-                      Stroke="Black"
-                      StrokeThickness="2.5"/>
-            </Grid>
-        </InternalControls:CommandButton>
-        <CheckBox Grid.Column="0"
-                  Grid.Row="4"
-                  Margin="10"
-                  Content="CheckBox"
-                  IsThreeState="True"/>
-        <RadioButton Grid.Column="0"
-                     Grid.Row="5"
-                     Margin="10"
-                     Content="RadioButton"/>
-        <TextBox Grid.Column="1"
-                 Grid.Row="0"
-                 Margin="15"
-                 Text="TextBox"/>
-        <PasswordBox Grid.Column="1"
-                     Grid.Row="1"
-                     Margin="15"
-                     Password="PasswordBox"/>
-        <RichTextBox Grid.Column="1"
-                     Grid.Row="2"
-                     Margin="15">
-            <FlowDocument>
-                <Paragraph>
-                    Paragraph
-                </Paragraph>
-            </FlowDocument>
-        </RichTextBox>
-        <TextBlock Grid.Column="1"
-                   Grid.Row="3"
-                   Margin="15"
-                   Text="TextBlock"/>
-        <ComboBox Grid.Column="2"
-                  Grid.Row="0"
-                  MaxDropDownHeight="125"
-                  Margin="15"
-                  SelectedIndex="0">
-            <ComboBoxItem>Default item</ComboBoxItem>
-            <ComboBoxItem>Item 1</ComboBoxItem>
-            <ComboBoxItem>Item 2</ComboBoxItem>
-            <ComboBoxItem>Item 3</ComboBoxItem>
-            <ComboBoxItem>Item 4</ComboBoxItem>
-            <ComboBoxItem>Item 5</ComboBoxItem>
-            <ComboBoxItem>Item 6</ComboBoxItem>
-            <ComboBoxItem>Item 7</ComboBoxItem>
-            <ComboBoxItem>Item 8</ComboBoxItem>
-            <ComboBoxItem>Item 9</ComboBoxItem>
-        </ComboBox>
-        <ListBox Grid.Column="2"
-                 Grid.Row="1"
-                 Grid.RowSpan="2"
-                 Margin="15"
-                 SelectedIndex="0">
-            <ListBoxItem>Default item</ListBoxItem>
-            <ListBoxItem>Item 1</ListBoxItem>
-            <ListBoxItem>Item 2</ListBoxItem>
-            <ListBoxItem>Item 3</ListBoxItem>
-            <ListBoxItem>Item 4</ListBoxItem>
-            <ListBoxItem>Item 5</ListBoxItem>
-        </ListBox>
-        <ScrollViewer Grid.Column="3"
-                      Grid.Row="0"
-                      Grid.RowSpan="2"
-                      HorizontalScrollBarVisibility="Visible"
-                      VerticalScrollBarVisibility="Visible">
-            <TextBlock TextWrapping="Wrap"
-                       Width="200">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </TextBlock>
-        </ScrollViewer>
-        <Slider Grid.Column="4"
-                Grid.Row="0"
-                Orientation="Horizontal"
-                Minimum="0" Value="50" Maximum="100"
-                Margin="15"/>
-        <Slider Grid.Column="4"
-                Grid.Row="1"
-                Grid.RowSpan="2"
-                Orientation="Vertical"
-                Minimum="0" Value="50" Maximum="100"
-                Margin="15"
-                HorizontalAlignment="Center"/>
-        <InternalControls:ProgressBar Grid.Column="5"
-                                      Grid.Row="0"
-                                      Minimum="0" Value="50" Maximum="100"
-                                      IsIndeterminate="{x:Null}"
-                                      Margin="15"/>
-        <InternalControls:ProgressBar Grid.Column="5"
-                                      Grid.Row="1"
-                                      Grid.RowSpan="2"
-                                      Orientation="Vertical"
-                                      Minimum="0" Value="50" Maximum="100"
-                                      IsIndeterminate="{x:Null}"
-                                      Margin="15"/>
-    </Grid>
+						 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+						 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+						 xmlns:InternalControls="clr-namespace:Elysium.Theme.Controls;assembly=Theme"
+						 Title="MainWindow"
+						 Background="{StaticResource Background}"
+						 MouseLeftButtonDown="WindowMouseLeftButtonDown"
+						 Width="1000" Height="600">
+	<Grid Background="{StaticResource Transparent}">
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="125"/>
+			<ColumnDefinition Width="125"/>
+			<ColumnDefinition Width="150"/>
+			<ColumnDefinition Width="125"/>
+			<ColumnDefinition Width="125"/>
+			<ColumnDefinition Width="225"/>
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="60"/>
+			<RowDefinition Height="60"/>
+			<RowDefinition Height="60"/>
+			<RowDefinition Height="30"/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
+		</Grid.RowDefinitions>
+		<Grid.ContextMenu>
+			<ContextMenu>
+				<MenuItem Header="Context menu item 1">
+					<MenuItem.Icon>
+						<Image Source="pack://application:,,,/Theme;component/Icons/Close.png"
+							   Stretch="None"/>
+					</MenuItem.Icon>
+				</MenuItem>
+					<MenuItem Header="Context menu item 2"
+						  IsCheckable="True"
+						  IsChecked="True"/>
+				<MenuItem Header="Context menu header">
+					<MenuItem Header="Context submenu item 1"/>
+					<MenuItem Header="Context submenu header">
+						<MenuItem Header="Context submenu item 1"/>
+						<MenuItem Header="Context submenu item 2"/>
+					</MenuItem>
+					<MenuItem Header="Context submenu item 2"/>
+				</MenuItem>
+				<MenuItem Header="Context menu item 3"/>
+			</ContextMenu>
+		</Grid.ContextMenu>
+		<Button Grid.Column="0"
+				Grid.Row="0"
+				Margin="15"
+				Content="Button"/>
+		<RepeatButton Grid.Column="0"
+					  Grid.Row="1"
+					  Margin="15"
+					  Content="RepeatButton"/>
+		<ToggleButton Grid.Column="0"
+					  Grid.Row="2"
+					  Margin="15"
+					  Content="ToggleButton"/>
+		<InternalControls:CommandButton Grid.Column="0"
+										Grid.Row="3"
+										HorizontalAlignment="Center"
+										Width="30" Height="30">
+			<Grid Background="Transparent">
+				<Path Data="M 7,0 L 7,14 M 0,7 L 14,7"
+					  Stroke="Black"
+					  StrokeThickness="2.5"/>
+			</Grid>
+		</InternalControls:CommandButton>
+		<CheckBox Grid.Column="0"
+				  Grid.Row="4"
+				  Margin="10"
+				  Content="CheckBox"
+				  IsThreeState="True"/>
+		<RadioButton Grid.Column="0"
+					 Grid.Row="5"
+					 Margin="10"
+					 Content="RadioButton"/>
+		<TextBox Grid.Column="1"
+				 Grid.Row="0"
+				 Margin="15"
+				 Text="TextBox"/>
+		<PasswordBox Grid.Column="1"
+					 Grid.Row="1"
+					 Margin="15"
+					 Password="PasswordBox"/>
+		<RichTextBox Grid.Column="1"
+					 Grid.Row="2"
+					 Margin="15">
+			<FlowDocument>
+				<Paragraph>
+					Paragraph
+				</Paragraph>
+			</FlowDocument>
+		</RichTextBox>
+		<TextBlock Grid.Column="1"
+				   Grid.Row="3"
+				   Margin="15"
+				   Text="TextBlock"/>
+		<ComboBox Grid.Column="2"
+				  Grid.Row="0"
+				  MaxDropDownHeight="125"
+				  Margin="15"
+				  SelectedIndex="0">
+			<ComboBoxItem>Default item</ComboBoxItem>
+			<ComboBoxItem>Item 1</ComboBoxItem>
+			<ComboBoxItem>Item 2</ComboBoxItem>
+			<ComboBoxItem>Item 3</ComboBoxItem>
+			<ComboBoxItem>Item 4</ComboBoxItem>
+			<ComboBoxItem>Item 5</ComboBoxItem>
+			<ComboBoxItem>Item 6</ComboBoxItem>
+			<ComboBoxItem>Item 7</ComboBoxItem>
+			<ComboBoxItem>Item 8</ComboBoxItem>
+			<ComboBoxItem>Item 9</ComboBoxItem>
+		</ComboBox>
+		<ListBox Grid.Column="2"
+				 Grid.Row="1"
+				 Grid.RowSpan="2"
+				 Margin="15"
+				 SelectedIndex="0">
+			<ListBoxItem>Default item</ListBoxItem>
+			<ListBoxItem>Item 1</ListBoxItem>
+			<ListBoxItem>Item 2</ListBoxItem>
+			<ListBoxItem>Item 3</ListBoxItem>
+			<ListBoxItem>Item 4</ListBoxItem>
+			<ListBoxItem>Item 5</ListBoxItem>
+		</ListBox>
+		<ScrollViewer Grid.Column="3"
+					  Grid.Row="0"
+					  Grid.RowSpan="2"
+					  HorizontalScrollBarVisibility="Visible"
+					  VerticalScrollBarVisibility="Visible">
+			<TextBlock TextWrapping="Wrap"
+					   Width="200">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</TextBlock>
+		</ScrollViewer>
+		<Slider Grid.Column="4"
+				Grid.Row="0"
+				Orientation="Horizontal"
+				Minimum="0" Value="50" Maximum="100"
+				Margin="15"/>
+		<Slider Grid.Column="4"
+				Grid.Row="1"
+				Grid.RowSpan="2"
+				Orientation="Vertical"
+				Minimum="0" Value="50" Maximum="100"
+				Margin="15"
+				HorizontalAlignment="Center"/>
+		<InternalControls:ProgressBar Grid.Column="5"
+									  Grid.Row="0"
+									  Minimum="0" Value="50" Maximum="100"
+									  IsIndeterminate="{x:Null}"
+									  Margin="15"/>
+		<InternalControls:ProgressBar Grid.Column="5"
+									  Grid.Row="1"
+									  Grid.RowSpan="2"
+									  Orientation="Vertical"
+									  Minimum="0" Value="50" Maximum="100"
+									  IsIndeterminate="{x:Null}"
+									  Margin="15"/>
+	</Grid>
 </InternalControls:Window>
