--- a/Theme/Themes/Selectors/SelectorsItemsBase.xaml
+++ b/Theme/Themes/Selectors/SelectorsItemsBase.xaml
@@ -7,7 +7,7 @@
 
     <Style x:Key="SelectorsItemsBaseStyle" TargetType="{x:Type ListBoxItem}">
 
-        <Setter Property="Background" Value="{StaticResource Background}"/>
+        <Setter Property="Background" Value="{StaticResource Transparent}"/>
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type Selector}}, Path=Foreground}"/>
